--- a/kops-update-templates/values.yaml
+++ b/kops-update-templates/values.yaml
@@ -1,5 +1,5 @@
 CLUSTER_NAME: kubernetes.k8sandbox.com
-S3_BUCKET_NAME: k8sandbox
+S3_BUCKET_NAME: k8sandbox.com
 SSH_PEM_NAME: k8sandbox
 
 KUBERNETES_VERSION: 1.9.6
@@ -8,32 +8,13 @@ VPC_ID: vpc-0fd1829f5a2131274
 DNS_ZONE_ID: Z3M8ZH4FGJQV5H
 
 ZONE1: us-east-1a
-#ZONE2: us-east-1b
-#ZONE3: us-east-1c
 
 #PRIVATE1 SUBNET
-SUBNET_CIDR1: 10.1.1.0/24
+SUBNET_CIDR1: 10.1.2.0/24
 SUBNET_ID1: subnet-096fd9547d989b07c
 
-#PRIVATE2 SUBNET
-#SUBNET_CIDR2: <SUBNET_CIDR2>
-#SUBNET_ID2: <SUBNET_ID2>
-
-#PRIVATE3 SUBNET
-#SUBNET_CIDR3: <SUBNET_CIDR3>
-#SUBNET_ID3: <SUBNET_ID3>
-
-#PUBLIC1(UTILITY) SUBNET
-SUBNET_CIDR4: 10.1.2.0/24
+SUBNET_CIDR4: 10.1.1.0/24
 SUBNET_ID4: subnet-0af079f71f8a23d8d
-
-#PUBLIC2(UTILITY) SUBNET
-#SUBNET_CIDR5: <SUBNET_CIDR5>
-#SUBNET_ID5: <SUBNET_ID5>
-
-#PUBLIC3(UTILITY) SUBNET
-#SUBNET_CIDR6: <SUBNET_CIDR6>
-#SUBNET_ID6: <SUBNET_ID6>
 
 NODES_TYPE: t2.medium
 NODES_DEFAULT_SIZE: 2
@@ -47,10 +28,3 @@ MASTER_US_EAST_1A_TYPE: t2.medium
 MASTER_US_EAST_1A_MIN_SIZE: 1
 MASTER_US_EAST_1A_MAX_SIZE: 1
 
-#MASTER_US_EAST_1B_TYPE: t2.small
-#MASTER_US_EAST_1B_MIN_SIZE: 1
-#MASTER_US_EAST_1B_MAX_SIZE: 1
-
-#MASTER_US_EAST_1C_TYPE: t2.small
-#MASTER_US_EAST_1C_MIN_SIZE: 1
-#MASTER_US_EAST_1C_MAX_SIZE: 1
