--- a/kops-update-templates/values.yaml
+++ b/kops-update-templates/values.yaml
@@ -1,5 +1,5 @@
-CLUSTER_NAME: kubernetes.k8sandbox.com
-S3_BUCKET_NAME: k8sandbox.com
+CLUSTER_NAME: kubernetes.test.k8sandbox.com
+S3_BUCKET_NAME: test.k8sandbox.com
 SSH_PEM_NAME: k8sandbox
 
 KUBERNETES_VERSION: 1.9.6
@@ -13,6 +13,7 @@ ZONE1: us-east-1a
 SUBNET_CIDR1: 10.1.2.0/24
 SUBNET_ID1: subnet-096fd9547d989b07c
 
+#PUBLIC SUBNET
 SUBNET_CIDR4: 10.1.1.0/24
 SUBNET_ID4: subnet-0af079f71f8a23d8d
 
@@ -28,3 +29,5 @@ MASTER_US_EAST_1A_TYPE: t2.medium
 MASTER_US_EAST_1A_MIN_SIZE: 1
 MASTER_US_EAST_1A_MAX_SIZE: 1
 
+#USER ON GIT REPO
+GIT_USER: k0938350210
