--- a/playbook.yaml
+++ b/playbook.yaml
@@ -32,10 +32,10 @@
     node_autoscaler_max: "{{ lookup('env','NODES_MAX_SIZE') }}"
     aws_region: "{{ lookup('env','AWS_DEFAULT_REGION') }}"
   roles:
-    - dashboard
-    - heapster
+#    - dashboard
+#    - heapster
     - external-dns
-    - autoscaler
+#    - autoscaler
     - ingress
     - route53-mapper
 
