--- a/kops-update-templates/values.yaml
+++ b/kops-update-templates/values.yaml
@@ -29,5 +29,6 @@ MASTER_US_EAST_1A_TYPE: t2.medium
 MASTER_US_EAST_1A_MIN_SIZE: 1
 MASTER_US_EAST_1A_MAX_SIZE: 1
 
-#USER ON GIT REPO
-GIT_USER: k0938350210
+#GIT REPOSITORY
+GIT_USER_NAME: k0938350210
+GIT_REPO_NAME: flux-get-started
